k8s/idp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth-idp-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth-idp-app
  template:
    metadata:
      labels:
        app: oauth-idp-app
    spec:
      containers:
        - name: oauth-idp-app
          image: oauth-idp-app:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
