k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-client-service
spec:
  selector:
    app: oauth-client-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
