k8s/idp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth-idp-service
spec:
  selector:
    app: oauth-idp-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
