k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: accounts.lalit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth-idp-service
                port:
                  number: 80
    - host: client.lalit.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: oauth-client-service
                port:
                  number: 80
